--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="todo.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
@@ -21,6 +21,6 @@
     </ul>
     </div>
     </div>
-<script src="todo.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
